RESOLVED FIXED 42727
The adoption agency doesn't properly attach()
https://bugs.webkit.org/show_bug.cgi?id=42727
Summary The adoption agency doesn't properly attach()
Adam Barth
Reported 2010-07-21 00:41:15 PDT
The adoption agency doesn't properly attach()
Attachments
Patch (3.40 KB, patch)
2010-07-21 00:44 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2010-07-21 00:44:07 PDT
Eric Seidel (no email)
Comment 2 2010-07-21 04:50:32 PDT
Comment on attachment 62150 [details] Patch I think we want some version of parserAddChild which does attachment. I feel like we've needed it in more than this case.
WebKit Commit Bot
Comment 3 2010-07-21 05:38:34 PDT
Comment on attachment 62150 [details] Patch Clearing flags on attachment: 62150 Committed r63814: <http://trac.webkit.org/changeset/63814>
WebKit Commit Bot
Comment 4 2010-07-21 05:38:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.